--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dialogflow": "^1.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^5.5.0"
