--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
-    "node-schedule": "^2.1.1"
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.4"
   }
 }
