--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
     "node-schedule": "^2.1.1",
-    "nodemailer": "^6.9.4"
+    "nodemailer": "^6.9.4",
+    "xlsx": "^0.18.5"
   }
 }
