--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dialogflow": "^1.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "mongodb": "^5.5.0",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.4",
