--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +16,14 @@
     "dialogflow": "^1.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jest": "^29.6.4",
     "moment": "^2.29.4",
     "mongodb": "^5.5.0",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.4",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "supertest": "^6.3.3"
   }
 }
