--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest": "^29.6.4",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongodb": "^5.5.0",
     "node-schedule": "^2.1.1",
